# nu_plugin_bash_env

./: .gitignore  Cargo.toml  LICENSE  README.md  bash-env.nu  build.rs  extra-module-tests.nu  fake_environment.json  flake.nix  nu_plugin_bash_env  nu_plugin_bash_env_tracer  run-tests.nu  signature.json  tests.nu
.github/workflows/: test-suite.yml
api/: Cargo.toml  flake.nix
api-generator/: .gitignore  Cargo.toml  flake.nix
api-generator/src/: main.rs
api/src/: main.rs
examples/: Ming's "menu" of (merciless) monstrosities.env  empty.env  error.env  single.env
scripts/: bash_env.sh
src/: main.rs
tests/: shell-functions.env  shell-variables.env  simple.env
