[package]
name = "nu_plugin_bash_env"
version = "0.13.0"
edition = "2021"
license = "MIT"
description = "Nu plugin bash-env"
homepage = "https://github.com/tesujimath/nu_plugin_bash_env"
repository = "https://github.com/tesujimath/nu_plugin_bash_env"
readme = "README.md"

[dependencies]
nu-plugin = "0.97.1"
nu-protocol = "0.97.1"
shellexpand = "3.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
