[package]
name = "nu_plugin_bash_env"
version = "0.15.0"
edition = "2021"
license = "MIT"
description = "Nu plugin bash-env"
homepage = "https://github.com/tesujimath/nu_plugin_bash_env"
repository = "https://github.com/tesujimath/nu_plugin_bash_env"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
nu-plugin = "0.98.0"
nu-protocol = "0.98.0"
once_cell = "1.19.0"
serde = "1.0.208"
serde_json = "1.0.125"
shellexpand = "3.1.0"
subprocess = "0.2.9"
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
