[package]
name = "nu_plugin_bash_env-api-generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "API generator for Nu plugin bash-env"
homepage = "https://github.com/tesujimath/nu_plugin_bash_env"
repository = "https://github.com/tesujimath/nu_plugin_bash_env"
readme = "README.md"

[dependencies]
nu-plugin = "0.89.0"
nu-protocol = "0.89.0"
serde_json = "1.0.112"
